--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body {
+  margin: 0;
+  padding: 0;
+  background-color:gainsboro;
+  height: 100%;
+
+}
+
+*{
+  font-family: 'Arvo', serif;
+}
+
+$background-color:gainsboro;
+
