--- a/src/app/pages/add-user/add-user.component.html
+++ b/src/app/pages/add-user/add-user.component.html
@@ -16,6 +16,6 @@
 </div>
 <div mat-dialog-actions [align]="'end'">
   <button mat-raised-button mat-dialog-close>Cancel</button>
-  <button mat-raised-button (click)="addUser()">Save</button>
+  <button mat-raised-button mat-dialog-close (click)="addUser()">Save</button>
 </div>
 
