--- a/src/app/pages/miniatures/miniatures.component.html
+++ b/src/app/pages/miniatures/miniatures.component.html
@@ -1,20 +1,22 @@
 <div class="base">
   <div class="card-container c1">
     <h3>Marketing</h3>
-    <input type="text">
+    <input type="text" #searchMarketing (keyup)="0">
     <div class="members-container">
-      <mat-card *ngFor="let user of users">
-        hola mundo {{user}}
+      <mat-card *ngFor="let user of searchUser(usersMarketing,searchMarketing.value)">
+        <p>name =  {{user.name}}</p>
+        <p>{{user.department}}</p>
       </mat-card>
     </div>
 
   </div>
   <div class="card-container">
     <h3>Development</h3>
-    <input type="text">
+    <input type="text" #searchDevelopment (keyup)="0">)
     <div class="members-container">
-      <mat-card *ngFor="let user of users">
-        hola mundo {{user}}
+      <mat-card *ngFor="let user of searchUser(usersDevelopment,searchDevelopment.value)">
+        <p>{{user.name}}</p>
+        <p>{{user.department}}</p>
       </mat-card>
     </div>
 
