--- a/src/app/pages/miniatures/miniatures.component.html
+++ b/src/app/pages/miniatures/miniatures.component.html
@@ -3,9 +3,10 @@
     <h3>Marketing</h3>
     <input type="text" #searchMarketing (keyup)="0">
     <div class="members-container">
-      <mat-card *ngFor="let user of searchUser(usersMarketing,searchMarketing.value)">
-        <p>name =  {{user.name}}</p>
+      <mat-card *ngFor="let user of searchUser(users,searchMarketing.value)">
+        <p>{{user.name}}</p>
         <p>{{user.department}}</p>
+        <p>{{experience(user)}}</p>
       </mat-card>
     </div>
 
@@ -17,6 +18,7 @@
       <mat-card *ngFor="let user of searchUser(usersDevelopment,searchDevelopment.value)">
         <p>{{user.name}}</p>
         <p>{{user.department}}</p>
+        <p>{{experience(user)}}</p>
       </mat-card>
     </div>
 
