--- a/src/app/pages/miniatures/miniatures.component.html
+++ b/src/app/pages/miniatures/miniatures.component.html
@@ -3,7 +3,7 @@
     <h3>Marketing</h3>
     <input type="text" #searchMarketing (keyup)="0">
     <div class="members-container">
-      <mat-card *ngFor="let user of searchUser(users,searchMarketing.value)">
+      <mat-card *ngFor="let user of searchUser(users,'marketing',searchMarketing.value)">
         <p>{{user.name}}</p>
         <p>{{user.department}}</p>
         <p>{{experience(user)}}</p>
@@ -15,7 +15,7 @@
     <h3>Development</h3>
     <input type="text" #searchDevelopment (keyup)="0">)
     <div class="members-container">
-      <mat-card *ngFor="let user of searchUser(usersDevelopment,searchDevelopment.value)">
+      <mat-card *ngFor="let user of searchUser(users,'development',searchDevelopment.value)">
         <p>{{user.name}}</p>
         <p>{{user.department}}</p>
         <p>{{experience(user)}}</p>
@@ -24,39 +24,3 @@
 
   </div>
 </div>
-
-
- <!-- <table>
-  <tr>
-    <td>
-      <span><p>Marketing</p></span>
-    </td>
-    <td>
-      <span><p>Development</p></span>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <input type="text">
-    </td>
-    <td>
-      <input type="text">
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <div class="members-container">
-        <mat-card *ngFor="let user of users">
-          hola mundo {{user}}
-        </mat-card>
-      </div>
-    </td>
-    <td>
-      <div class="members-container">
-        <mat-card *ngFor="let user of users">
-          hola mundo {{user}}
-        </mat-card>
-      </div>
-    </td>
-  </tr>
- </table> -->
