--- a/src/app/pages/add-user/add-user.component.html
+++ b/src/app/pages/add-user/add-user.component.html
@@ -1,5 +1,5 @@
-<h2>Add row</h2>
 <div mat-dialog-content>
+  <h2>Add row</h2>
   <form [formGroup]="userForm">
     <h4>Name</h4>
     <input  formControlName="name">
@@ -16,6 +16,6 @@
 </div>
 <div mat-dialog-actions [align]="'end'">
   <button mat-raised-button mat-dialog-close>Cancel</button>
-  <button mat-raised-button mat-dialog-close (click)="addUser()">Save</button>
+  <button mat-raised-button mat-dialog-close class="accept" (click)="addUser()" [disabled]="userForm.invalid">Save</button>
 </div>
 
