--- a/src/app/pages/add-user/add-user.component.scss
+++ b/src/app/pages/add-user/add-user.component.scss
@@ -1,14 +1,10 @@
-
-//  .panelClass .mat-dialog-container{
-//   width:30%;
-//   height:48vh;
-//   padding: 0;
-//   background-color: red;
-//  }
+@import '../../../styles.scss';
 
 .mat-dialog-content{
+  margin: 2rem;
 
   input{
+    padding: 8px;
     width: 100%;
     height: 50px;
     border: solid 1px black;
@@ -16,8 +12,9 @@
   }
 
   select{
-    width: 100%;
-    height: 50px;
+    padding: 5px;
+    width: 103%;
+    height: 60px;
     border: solid 1px black;
     border-radius: 10px;
 
@@ -27,13 +24,41 @@
   }
 }
 .mat-dialog-actions{
+  border-top: 1px solid gray;
+  height: 15%;
   margin-top: 1rem;
   background-color: gainsboro;
 
   .mat-raised-button{
     font-size: larger;
+    width: 100px;
     margin: 1rem;
-    background-color: green;
-    border-radius: 15px;
+    box-shadow: none;
+    background-color: unset;
+    border: unset;
+    outline: unset;
   }
+
+  .accept{
+    font-size: larger;
+    width: 100px;
+    margin: 1rem;
+    border-radius: 15px;
+    background-color: $color-buttons;
+  }
+
+  .accept:disabled{
+    font-size: larger;
+    width: 100px;
+    margin: 1rem;
+    border-radius: 15px;
+    background-color: $color-buttons;
+  }
+}
+
+.mat-dialog-container {
+  margin:auto;
+  width: 50%;
+  padding: 0px !important;
+  overflow: visible;
 }
