--- a/src/app/pages/delete-user/delete-user.component.scss
+++ b/src/app/pages/delete-user/delete-user.component.scss
@@ -1,8 +1,7 @@
 .mat-dialog-content{
-
-
-
+  margin: 2rem;
   input{
+    padding: 5px;
     width: 100%;
     height: 50px;
     border: solid 1px black;
@@ -11,13 +10,35 @@
 }
 
 .mat-dialog-actions{
+  border-top: 1px solid gray;
+  height: 15%;
   margin-top: 1rem;
   background-color: gainsboro;
 
+
   .mat-raised-button{
     font-size: larger;
+    width: 100px;
     margin: 1rem;
-    background-color: red;
-    border-radius: 15px;
+    box-shadow: none;
+    background-color: unset;
+    border: unset;
+    outline: unset;
   }
+
+  .delete{
+    font-size: larger;
+    width: 120px;
+    margin: 1rem;
+    border-radius: 15px;
+    background-color: rgba(201, 67, 67, 0.671);
+  }
+
+}
+
+.mat-dialog-container {
+  margin:auto;
+  width: 50%;
+  padding: 0px !important;
+  overflow: visible;
 }
