--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -18,24 +18,28 @@
     .mat-button-toggle{
       background-color: grey ;
       color: #f5f5f6;
+      width: 50px;
+      border-radius: 20px;
     }
     .mat-button-toggle-checked {
-      background-color: rgb(181, 243, 181);
+      background-color: $color-buttons;
       color: #f5f5f6;
+    }
+
+    .mat-raised-button{
+      background-color:$color-buttons;
+      color: #f5f5f6;
+      width: 120px;
+      border-radius: 20px;
     }
   }
 
-  .mat-dialog-container {
-    padding: 0px !important;
-  }
 
-  .component_container{
-    width: 90vw;
-    height: 50vh;
+.custom-dialog-container .mat-dialog-container {
+  /* add your styles */
+}
+
+  .table-class{
     background-color: white;
-    display: flex;
-    justify-content: center;
-    overflow-x:hidden;
-    overflow-y: scroll;
   }
 }
