--- a/src/app/pages/users-table/users-table.component.scss
+++ b/src/app/pages/users-table/users-table.component.scss
@@ -1,83 +1,105 @@
+:host{
+  background-color: white;
+  width: 100%;
 
-table{
-  margin: 2rem;
-  width:86vw;
-  height: 89%;
-  border: 1px solid;
-  border-collapse: collapse;
+  table{
+    margin: 2rem;
+    width:86vw;
+    height: 89%;
+    border: 1px solid;
+    border-collapse: collapse;
 
-  th{
-    border: 2px solid gray;
-    height: 71px;
-    padding-left: 1rem;
-    font-weight: bold;
-    background-color: rgb(73, 64, 64);
-    color: white;
-    text-align: left;
-  }
-
-  tr{
-    height: 75px;
-
-    .name{
-      width: 30%;
-    }
-
-    .email{
-       width:35%
-    }
-
-    .department{
-      width:25% ;
-    }
-
-    .options{
-      width: 10%;
-    }
-
-    td{
+    th{
       border: 2px solid gray;
-      padding: 1rem;
+      height: 71px;
+      padding-left: 1rem;
+      font-weight: bold;
+      background-color: rgba(35, 40, 46, 0.747);
+      color: white;
+      text-align: left;
+    }
 
-      .edit-icon{
-        display: none;
+    tr{
+      height: 75px;
+
+      .name{
+        width: 30%;
       }
 
-      .delete-icon{
-        display: none;
+      .email{
+         width:35%
       }
 
-      .done-icon{
-        color: green;
+      .department{
+        width:25% ;
       }
 
-      .cancel-icon{
-        color: red;
+
+
+      td{
+        border: 2px solid gray;
+        padding: 1rem;
+
+        .edit-icon{
+          display: none;
+        }
+
+        .delete-icon{
+          display: none;
+        }
+
+        .done-icon{
+          color: green;
+          cursor: pointer;
+        }
+
+        .cancel-icon{
+          color: red;
+          cursor: pointer;
+        }
+
+        input{
+          height: 100%;
+          width: 95%;
+          padding: 15px;
+        }
+
+        select{
+          height: 100%;
+          width: 95%;
+          padding: 15px;
+        }
       }
     }
-  }
 
-  tr:hover{
-    background-color: antiquewhite;
+    tr:hover{
+      background-color: rgba(168, 163, 163, 0.192);
 
-    td{
-      border: 2px solid gray;
-      padding: 1rem;
+      td{
 
-      .delete-icon{
-        display: initial;
-        color: red;
-        cursor: pointer;
+        border: 2px solid gray;
+        padding: 1rem;
       }
 
-      .edit-icon{
-        display: initial;
-        padding: 0 1rem;
-        color: green;
+      .options{
+
+        .delete-icon{
+          display: initial;
+          color: red;
+          cursor: pointer;
+        }
+
+        .edit-icon{
+          display: initial;
+          color: green;
+          cursor: pointer;
+        }
       }
     }
   }
 
 }
 
-
+.custom-dialog-container .mat-dialog-container {
+  /* add your styles */
+}
