--- a/src/app/modals/add-user/add-user.component.html
+++ b/src/app/modals/add-user/add-user.component.html
@@ -15,7 +15,7 @@
   </form>
 </div>
 <div mat-dialog-actions [align]="'end'">
-  <button mat-raised-button mat-dialog-close>Cancel</button>
+  <button mat-raised-button mat-dialog-close class="cancel">Cancel</button>
   <button mat-raised-button mat-dialog-close class="accept" (click)="addUser()" [disabled]="userForm.invalid">Save</button>
 </div>
 
