--- a/src/app/modals/add-user/add-user.component.scss
+++ b/src/app/modals/add-user/add-user.component.scss
@@ -29,7 +29,7 @@
   margin-top: 1rem;
   background-color: gainsboro;
 
-  .mat-raised-button{
+  .cancel{
     font-size: larger;
     width: 100px;
     margin: 1rem;
