--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -11,11 +11,8 @@
     <button mat-raised-button  (click)="openDialog()">ADD ROW</button>
   </div>
 
+  <app-users-table [users]="users"  *ngIf="tableVisibility"></app-users-table>
 
-    <app-users-table [users]="users"  *ngIf="tableVisivility"></app-users-table>
-
-    <app-miniatures [users]="users" *ngIf="!tableVisivility"></app-miniatures>
+  <app-miniatures [users]="users" *ngIf="!tableVisibility"></app-miniatures>
 
 </div>
-
-
