--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -20,6 +20,12 @@
       color: #f5f5f6;
       width: 50px;
       border-radius: 20px;
+      &:first-child {
+        border-radius: 20px 0 0 20px;
+      }
+      &:last-child {
+        border-radius: 0 20px 20px 0;
+      }
     }
     .mat-button-toggle-checked {
       background-color: $color-buttons;
