--- a/src/app/pages/home/miniatures/miniatures.component.html
+++ b/src/app/pages/home/miniatures/miniatures.component.html
@@ -2,12 +2,12 @@
 <div class="container-container">
   <div class="card-container">
     <h3>Marketing</h3>
-    <input type="text" #searchMarketing (keyup)="0">
+    <input type="text" #searchMarketing (keyup)="0" placeholder="Search...">
     <div class="members-container">
       <mat-card *ngFor="let user of searchUser(users,'marketing',searchMarketing.value)">
         <div class="img-container">
           <img src="../../../../assets/userIcon.jpg">
-          <p class="experience">{{experience(user)}}</p>
+          <p class="experience" [ngStyle]="{'background-color':colorExperience(experience(user))}">{{experience(user)}}</p>
         </div>
         <p class="info">{{user.name}}</p>
         <p class="info">{{user.email}}</p>
@@ -17,12 +17,12 @@
 
   <div  class="card-container">
     <h3>Development</h3>
-    <input type="text" #searchDevelopment (keyup)="0">
+    <input type="text" #searchDevelopment (keyup)="0" placeholder="Search...">
     <div class="members-container">
       <mat-card *ngFor="let user of searchUser(users,'development',searchDevelopment.value)">
         <div class="img-container">
           <img src="../../../../assets/userIcon.jpg">
-          <p class="experience">{{experience(user)}}</p>
+          <p class="experience" [ngStyle]="{'background-color':colorExperience(experience(user))}">{{experience(user)}}</p>
         </div>
         <p class="info">{{user.name}}</p>
         <p class="info">{{user.email}}</p>
