--- a/src/app/pages/home/miniatures/miniatures.component.scss
+++ b/src/app/pages/home/miniatures/miniatures.component.scss
@@ -29,16 +29,23 @@
       .members-container{
         display: flex;
         flex-wrap: wrap;
+        justify-content: flex-start;
+        align-items: center;
+        justify-content: space-around;
 
         mat-card{
           text-align: center;
           position: relative;
-          width: 180px;
+          width: 290px;
           height: 250px;
           margin: 0 10px 10px 0;
 
           .img-container{
-            position: relative;
+            display: flex;
+            flex-direction: column;
+            align-content: center;
+            justify-content: flex-end;
+            align-items: center;
             text-align: center;
             margin-bottom: 15px;
 
@@ -49,10 +56,14 @@
             }
 
             .experience{
+              text-align: center;
               width: 50%;
+              padding: 5px 0;
               position: absolute;
-              left: 44px;
-              top: 124px;
+              font-size: large;
+              color: white;
+              border-radius: 20px;
+
             }
           }
 
@@ -66,5 +77,4 @@
       }
     }
   }
-
 }
