--- a/src/app/pages/home/miniatures/miniatures.component.scss
+++ b/src/app/pages/home/miniatures/miniatures.component.scss
@@ -57,12 +57,12 @@
 
             .experience{
               text-align: center;
-              width: 50%;
-              padding: 5px 0;
+              padding: 8px 8px;
               position: absolute;
               font-size: large;
               color: white;
               border-radius: 20px;
+              margin: 0 0 10px 0
 
             }
           }
